--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
             </svg>
         </div>
         <nav class="nav-links">
-            <a href="#sistema">Sistema Experto</a>
+            <a href="cuestionario.html">Sistema Experto</a>
             <a href="#puntaje">Puntaje</a>
         </nav>
     </header>
@@ -48,8 +48,8 @@
                 </div>
             </div>
             
-            <button class="cta-button">Empezar</button>
-        </div>
+            <a class="cta-button" href="cuestionario.html">Empezar</a>
+        </div> 
     </section>
 
      <!-- Sección Imagen sin texto -->
