pagina de los puntajes completada al 100%

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="nav-links">
             <a href="cuestionario.html">Sistema Experto</a>
-            <a href="#puntaje">Puntaje</a>
+            <a href="puntaje.html">Puntaje</a>
         </nav>
     </header>
 
