se agrego un boton para regresar al inicio jaja ahora si es el final final

--- a/frontend/cuestionario.html
+++ b/frontend/cuestionario.html
@@ -16,6 +16,7 @@
             </svg>
         </div>
         <nav class="nav-links">
+            <a href="index.html">Inicio</a>
             <a href="cuestionario.html">Sistema Experto</a>
             <a href="puntaje.html">Puntaje</a>
         </nav>
