Integración Frontend-Backend completada. Sistema Experto funcional con resaltado de perfil y recomendaciones.

--- a/frontend/puntaje.html
+++ b/frontend/puntaje.html
@@ -96,7 +96,22 @@
                 </div>
             </div>
         </div>
+
+        <section class="recommendations-section" id="recommendations-container"
+            style="display: none; padding: 4rem 0; background-color: #f4f4f4;">
+            <div class="container">
+                <h2 class="section-title" style="color: #333; text-align: center; margin-bottom: 2rem;">
+                    Instrumentos Recomendados para Ti
+                </h2>
+                <div id="instruments-grid"
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                </div>
+            </div>
+        </section>
+
+        <script src="js/puntaje.js"></script>
     </section>
+
 
     <!-- Footer -->
     <footer class="footer">
