testimonios agregados con js y cambio de titulo en puntaje.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,7 @@
             
             <p class="testimonials-footer">Apóyate de nuestro sistema experto para que conozcas como invertir tu dinero de manera correcta según tus objetivos.</p>
             
-            <button class="cta-button">Conocer más</button>
+            <a href="puntaje.html" class="cta-button">Conocer más</a>
         </div>
     </section>
 
@@ -152,5 +152,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/testimonios.js"></script>
 </body>
 </html>
