--- a/frontend/puntaje.html
+++ b/frontend/puntaje.html
@@ -26,7 +26,7 @@
     <section class="hero-section">
         <div class="content-wrapper">
             <div class="hero-content">
-                <h1 class="main-title">Perfil Del Inversinoista</h1>
+                <h1 class="main-title">Perfil Del Inversionista</h1>
             </div>
         </div>
     </section>
